# gman

./: .todo  CMakeLists.txt  README.md  books.graphml  development.md  readme.md  references_template.graphml
include/: gat.hpp
include/data/: data_structures.hpp  database_manager.hpp
include/data_interaction/: big_node_editor.hpp  config_p.hpp  mini_node_editor.hpp  node_editor.hpp  node_iterators.hpp  node_writer.hpp  tree_viewer.hpp
include/gui/: category_bar.hpp  category_tile.hpp  gui_manager.hpp  main_text.hpp  screen_handler.hpp  status_bar.hpp  text_window.hpp  window_manager.hpp
include/io/: file_request_handler.hpp  tex_parser.hpp  tex_parser_readme.txt  txt_writer.hpp  xml_interface.hpp
include/key_handling/: key_handler.hpp
key_registration_module/: compile_test_script.sh  readme.txt  test.cpp
key_registration_module/include/: GetPot.h  key_manager.hpp
samples/: books.graphml  books_test.graphml  d4_root_system.graphml  desargues.graphml  desargues_direct_inclusions.graphml  hasse_diagram_d4.graphml  references_template.graphml
source/: Main.cpp
source/data/: database_manager.cpp
source/data_interaction/: tree_viewer.cpp
source/gui/: category_bar.cpp  category_tile.cpp  screen_handler.cpp
source/key_handling/: key_handler.cpp
tex_sources/: 0209290.tex  1003.1469.tex
tex_sources/1506.00104dir/: abstract.tex  authors.tex  geom_reform.tex  intro.tex  main11.tex  octonions.tex  preamble.tex  proj_geom.tex  pseudo_riem.tex  references.tex
tex_sources/1510.07742dir/: Involutes_Evolutes18.tex
